Prevent overlap of sidebar (#373)

--- a/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/site.scss
@@ -205,6 +205,7 @@ form.comment {
     border-spacing: 0;
     padding-top: 8px;
     padding-bottom: 8px;
+    background-color: white; // prevents code-window from overlapping stickySidebar
 }
 
 .code-line {
